# suk

./: .gitignore  README.md  pyproject.toml
suk/: cli.py  history.py  mail.py  updater.py
