[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suk"
version = "3.0.0"
description = "Disposable temp-mail inbox straight from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.6",
    "requests>=2.28",
]

[project.scripts]
suk = "suk.cli:main"

[project.urls]
Homepage = "https://github.com/forshaur/suk"
"Bug Tracker" = "https://github.com/forshaur/suk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["suk*"]